--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,5 @@
 @import '~bootstrap/scss/bootstrap';
 @import "welcome/welcome";
 @import "main";
+@import "header/header";
+@import "modals/modals";
