--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11366,6 +11366,11 @@ a.text-dark:focus {
   margin-top: 2%;
 }
 
+.welcome-shadow-greeting {
+  font-size: 22px;
+  color: gray;
+}
+
 .welcome-announcement {
   margin-top: 2%;
   font-size: 18px;
@@ -11376,10 +11381,39 @@ a.text-dark:focus {
   padding-right: 20%;
 }
 
+@media screen and (max-width: 770px) and (min-width: 475px) {
+  .welcome-panel {
+    padding-left: 35%;
+    padding-right: 20%;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .welcome-panel {
+    padding-left: 30%;
+    padding-right: 20%;
+  }
+}
+
 .welcome-panel-text {
   font-size: 16px;
   margin-top: 8px;
   margin-left: 20px;
+}
+
+.welcome-second-panel {
+  height: 270px;
+  margin-bottom: 30px;
+}
+
+.welcome-second-panel-text {
+  font-size: 16px;
+  color: gray;
+}
+
+.welcome-second-panel-header {
+  margin-bottom: 3%;
+  font-size: 18px;
 }
 
 .welcome-panel-bindings {
@@ -11387,20 +11421,86 @@ a.text-dark:focus {
 }
 
 .button-primary {
-  margin-top: 2%;
   background: #ff8520;
   border-radius: 5px;
   color: white;
   font-size: 24px;
   border: none;
-  padding: 10px;
+}
+
+button {
+  outline: none !important;
 }
 
 .button-primary-welcome {
+  margin-top: 2%;
+  padding: 10px;
   height: 65px;
+  min-width: 210px;
 }
 
 .button-primary:hover {
   background: #e16500;
+}
+
+.orange-text {
+  color: #ff8520;
+}
+
+.orange {
+  background: #ff8520;
+}
+
+.invalid-feedback {
+  margin-left: 10px;
+  margin-bottom: -5px;
+}
+
+main {
+  min-width: 400px;
+}
+
+.button-primary-header {
+  font-size: 16px;
+  height: 35px;
+  width: 130px;
+  min-width: 100px;
+}
+
+.nav-item {
+  margin: 2px 10px;
+}
+
+.modal-header {
+  border-bottom: none;
+  padding-bottom: 0;
+  padding-top: 10px;
+}
+
+.modal-body {
+  padding-top: 3px;
+}
+
+.modal-dialog {
+  max-width: 810px;
+}
+
+.modal-primary {
+  height: 510px;
+  width: 810px;
+}
+
+.modal-title {
+  font-size: 22px;
+}
+
+.modal-text {
+  font-size: 16px;
+  color: gray;
+}
+
+.button-modal {
+  font-size: 16px;
+  padding: 8px 16px;
 }
 
