--- a/resources/sass/welcome/welcome.scss
+++ b/resources/sass/welcome/welcome.scss
@@ -6,6 +6,11 @@
     font-size: 28px;
     margin-top: 2%;
 }
+.welcome-shadow-greeting{
+    font-size: 22px;
+    color:gray;
+}
+
 .welcome-announcement{
     margin-top: 2%;
     font-size: 18px;
@@ -14,10 +19,35 @@
     padding-left: 20%;
     padding-right: 20%;
 }
+@media screen and (max-width: 770px) and (min-width:475px){
+    .welcome-panel{
+        padding-left: 35%;
+        padding-right: 20%;
+    }
+}
+@media screen and(max-width: 475px){
+    .welcome-panel{
+        padding-left: 30%;
+        padding-right: 20%;
+    }
+}
 .welcome-panel-text{
     font-size: 16px;
     margin-top: 8px;
     margin-left: 20px;
+}
+
+.welcome-second-panel{
+    height:270px;
+    margin-bottom: 30px;
+}
+.welcome-second-panel-text{
+    font-size: 16px;
+    color:gray;
+}
+.welcome-second-panel-header{
+    margin-bottom: 3%;
+    font-size: 18px;
 }
 .welcome-panel-bindings{
     margin-top: 8%;
