--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11760,8 +11760,11 @@ main {
   overflow: hidden;
   text-overflow: ellipsis;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 17px;
   max-height: 64px;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 
 .ar-middle-description {
@@ -11770,6 +11773,10 @@ main {
   text-overflow: ellipsis;
   font-size: 14px;
   max-height: 40px;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-height: 1.2;
 }
 
 .ar-middle-author {
@@ -11777,6 +11784,11 @@ main {
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 20px;
+  color: black;
+}
+
+.ar-middle-author:hover {
+  color: black;
 }
 
 .popular {
