--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11830,3 +11830,27 @@ main {
   -webkit-box-orient: vertical;
 }
 
+.def-text {
+  font-family: "Nunito", sans-serif;
+  width: 70%;
+  outline: none;
+  border: none;
+}
+
+#idea-header {
+  font-size: 26px;
+  min-height: 30px;
+}
+
+#idea-body {
+  font-size: 18px;
+}
+
+.publish-button {
+  font-size: 17px;
+}
+
+#create-modal {
+  background: black;
+}
+
