--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,5 @@
 @import "header/metabar";
 @import  "home/articles";
 @import "home/popular";
+@import "home/create_article";
+@import "modals/create_modal";
