--- a/resources/sass/modals/create_modal.scss
+++ b/resources/sass/modals/create_modal.scss
@@ -1,3 +1,72 @@
 #create-modal{
     background: black;
 }
+.dialog{
+    margin-top: 10%;
+}
+.create-header{
+    font-size: 16px;
+    font-weight:700;
+    padding: 0;
+}
+#file-create{
+    display: none;
+}
+.file-create-col{
+    background: #f5f5f5;
+    height: 150px;
+}
+
+.file-create-label{
+    height: 150px;
+    width:100%;
+    cursor:pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bb{
+    border:none;
+}
+.bb-2{
+    border:none;
+    border-bottom: #f5f5f5 solid 2px;
+}
+.big-input{
+    font-weight: 600;
+    padding:0;
+    width: 100%;
+}
+
+.small-input{
+    padding:0;
+    font-weight: 400;
+    color:gray;
+}
+.bb-1{
+    border:none;
+    border-bottom: #f5f5f5 solid 1px;
+}
+.size-info{
+    font-size: 10px;
+    color:lightgray;
+    padding:0;
+}
+.create-info{
+    padding: 0;
+    font-size:14px;
+    color:gray;
+}
+.tag-creator{
+    //background: #f5f5f5;
+    padding: 3px;
+}
+.tag-name{
+    padding: 0;
+}
+.tag{
+    background: white;
+    border:1px solid black;
+    border-radius: 5px;
+
+}
