--- a/resources/sass/modals/create_modal.scss
+++ b/resources/sass/modals/create_modal.scss
@@ -3,6 +3,7 @@
 }
 .dialog{
     margin-top: 10%;
+    max-width: 990px;
 }
 .create-header{
     font-size: 16px;
@@ -66,7 +67,49 @@
 }
 .tag{
     background: white;
-    border:1px solid black;
-    border-radius: 5px;
-
+    border:1px solid lightgray;
+    border-radius: 3px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+.tag:hover{
+    border:1px solid gray;
+    cursor:pointer;
+}
+.tag-name{
+    font-size: 13px;
+}
+.close{
+    margin-top: 0.3rem;
+    font-size: 14px;
+}
+#tag-search{
+    width:100%;
+    height:50px;
+    background: #f5f5f5;
+    border: 1px solid lightgray;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+#search-result{
+    position: absolute;
+    background:white;
+    z-index:2100;
+    display: none;
+    border-left: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    margin-left: 0;
+}
+.search-result-folder{
+    padding: 10px;
+    font-size: 14px;
+    font-weight: 700;
+}
+.search-result-folder:hover{
+    background: $my-orange;
+    color:white;
+    cursor:pointer;
 }
