--- a/resources/sass/home/create_article.scss
+++ b/resources/sass/home/create_article.scss
@@ -4,7 +4,7 @@
     outline: none;
     border:none;
 }
-#idea-header{
+#idea-title{
     font-size: 26px;
     min-height: 30px;
 }
@@ -14,3 +14,4 @@
 .publish-button{
     font-size:17px;
 }
+
