--- a/resources/sass/home/articles.scss
+++ b/resources/sass/home/articles.scss
@@ -86,3 +86,10 @@
 .ar-middle-author:hover{
     color:black;
 }
+.ar-link{
+    color:black;
+}
+.ar-link:hover{
+    color:black;
+    text-decoration: none;
+}
