--- a/resources/sass/modals/create_modal.scss
+++ b/resources/sass/modals/create_modal.scss
@@ -120,3 +120,7 @@
     color:$my-orange;
     font-weight:700;
 }
+.disabled-button{
+    background-color:$my-orange-darked;
+    cursor:default;
+}
