--- a/resources/sass/article/bookmarks.scss
+++ b/resources/sass/article/bookmarks.scss
@@ -2,3 +2,23 @@
     color:lightgray;
     font-size: 14px;
 }
+.bm-header{
+    font-weight: 700;
+    font-size: 20px;
+    padding-left: 2.5%;
+}
+.bm-bookmark{
+    margin-top: 5%;
+}
+.bm-border{
+    border:1px solid lightgray;
+}
+@media (min-width: 576px) {
+    .bm-container{
+        height:150px;
+    }
+}
+
+.bm-container{
+    height:140px;
+}
