--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11719,12 +11719,22 @@ main {
 .article-header {
   font-weight: 600;
   font-size: 22px;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .article-description {
   font-weight: 400;
   font-size: 13px;
   color: gray;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .article-author {
@@ -11744,9 +11754,11 @@ main {
   line-height: 15px;
   max-height: 32px;
   font-size: 14px;
-  white-space: nowrap;
   max-width: 240px;
   text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 
 .ar-small-description {
@@ -11754,6 +11766,11 @@ main {
   font-size: 12px;
   color: gray;
   margin-bottom: 0;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .ar-small-author {
@@ -11798,9 +11815,9 @@ main {
 .ar-middle-description {
   color: gray;
   overflow: hidden;
-  text-overflow: ellipsis;
   font-size: 14px;
   max-height: 40px;
+  text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -12233,5 +12250,17 @@ main {
 
 .bm-container {
   height: 140px;
+}
+
+.f-title {
+  font-size: 18px;
+  font-weight: 700;
+  padding-left: 2.5%;
+}
+
+.f-sub-title {
+  font-size: 16px;
+  color: lightgray;
+  padding-left: 2.5%;
 }
 
