--- a/resources/sass/home/articles.scss
+++ b/resources/sass/home/articles.scss
@@ -1,12 +1,24 @@
 .article-header{
     font-weight: 600;
     font-size: 22px;
+    text-overflow:ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
+
 .article-description{
     font-weight: 400;
     font-size: 13px;
     color:gray;
+    text-overflow:ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
+
 .article-author{
     font-size: 14px;
     line-height:20px;
@@ -22,15 +34,22 @@
     line-height: 15px;
     max-height: 32px;
     font-size:14px;
-    white-space:nowrap;
     max-width: 240px;
     text-overflow:ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
 }
 .ar-small-description{
     font-weight: 400;
     font-size: 12px;
     color:gray;
     margin-bottom: 0;
+    text-overflow:ellipsis;
+    -webkit-line-clamp: 1;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 .ar-small-author{
     font-size: 12px;
@@ -68,9 +87,9 @@
 .ar-middle-description{
     color:gray;
     overflow: hidden;
-    text-overflow:ellipsis;
     font-size:14px;
     max-height: 40px;
+    text-overflow:ellipsis;
     -webkit-line-clamp: 2;
     display: -webkit-box;
     -webkit-box-orient: vertical;
