--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12157,6 +12157,10 @@ main {
   font-size: 24px;
 }
 
+.material-icons.md-30 {
+  font-size: 30px;
+}
+
 .material-icons.md-36 {
   font-size: 36px;
 }
@@ -12216,7 +12220,7 @@ main {
 }
 
 .pointed {
-  border: 2px solid #ff8520;
+  border: 2px solid #ff8520 !important;
 }
 
 .material-icons.pointed-icon {
@@ -12262,5 +12266,49 @@ main {
   font-size: 16px;
   color: lightgray;
   padding-left: 2.5%;
+}
+
+.mh-80 {
+  max-height: 180px;
+  overflow: hidden;
+}
+
+.pub-description {
+  font-weight: 400;
+  font-size: 13px;
+  color: gray;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 5;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.pub-header {
+  font-weight: 600;
+  font-size: 22px;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 5;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.pub-interesting {
+  background: none;
+  border: 2px solid rgba(0, 0, 0, 0.6);
+  border-radius: 50%;
+  padding: 0;
+  width: 35px;
+  height: 35px;
+  line-height: 34px;
+  margin-top: 0.5em;
+}
+
+.pub-interesting:hover {
+  border: 2px solid #ff8520;
+  color: #ff8520 !important;
+  -webkit-transition-duration: 1.2s;
+          transition-duration: 1.2s;
 }
 
