--- a/resources/sass/for_icons.scss
+++ b/resources/sass/for_icons.scss
@@ -1,6 +1,7 @@
 /* Rules for sizing the icon. */
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
+.material-icons.md-30 { font-size: 30px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 44px; }
 
@@ -36,7 +37,7 @@
     margin-top: 0.75em;
 }
 .pointed{
-    border:2px solid $my-orange;
+    border:2px solid $my-orange !important;
 }
 .material-icons.pointed-icon{
     color:$my-orange;
