--- a/resources/sass/article/plain.scss
+++ b/resources/sass/article/plain.scss
@@ -78,7 +78,6 @@
     margin-top: 1em;
 }
 .ar-plain-bottom-button{
-
     vertical-align: middle;
     padding: 4px 8px;
     margin-top: 1em;
@@ -88,4 +87,11 @@
 .ar-plain-author{
     font-weight:700;
     font-size:20px;
+}
+.unfollow{
+    vertical-align: middle;
+    padding: 4px 8px;
+    margin-top: 1em;
+    font-size: 18px;
+    line-height: 20px;
 }
