--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -83,5 +83,8 @@ main{
     border-radius: 50%;
 }
 .fs-16{
-    font-size: 16px;
+    font-size: 16px !important;
+}
+.fs-20{
+    font-size: 20px;
 }
