--- a/resources/sass/home/articles.scss
+++ b/resources/sass/home/articles.scss
@@ -112,3 +112,23 @@
     color:black;
     text-decoration: none;
 }
+.height-reg{
+    height:160px
+}
+@media (min-width: 576px) {
+    .height-reg{
+        height:150px
+    }
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
+}
