--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11533,6 +11533,28 @@ main {
   font-size: 20px;
 }
 
+.ml-30 {
+  margin-left: 30px;
+}
+
+@media (min-width: 1200px) {
+  .addition-margin {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.d-150 {
+  width: 150px;
+  height: 150px;
+}
+
+.d-90 {
+  width: 90px;
+  height: 90px;
+}
+
 .button-primary-header {
   font-size: 16px;
   height: 35px;
@@ -11847,6 +11869,16 @@ main {
 .ar-link:hover {
   color: black;
   text-decoration: none;
+}
+
+.height-reg {
+  height: 160px;
+}
+
+@media (min-width: 576px) {
+  .height-reg {
+    height: 150px;
+  }
 }
 
 .popular {
@@ -12290,20 +12322,16 @@ main {
   font-size: 13px;
   color: gray;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 5;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .pub-header {
   font-weight: 600;
   font-size: 22px;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 5;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .pub-interesting {
