--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -88,3 +88,34 @@ main{
 .fs-20{
     font-size: 20px;
 }
+.ml-30{
+    margin-left: 30px;
+}
+
+@media (min-width: 576px) {
+
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+    .addition-margin{
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+.d-150{
+    width:150px;
+    height:150px;
+}
+.d-90{
+    width:90px;
+    height:90px;
+}
