--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,3 +20,5 @@ $cyan: #6cb2eb;
 
 $my-orange:rgb(255,133,32);
 $my-orange-darked:rgb(225,101,0);
+$my-dark:rgb(25,25,25);
+$silver:rgb(192,192,192);
