--- a/resources/sass/for_icons.scss
+++ b/resources/sass/for_icons.scss
@@ -42,3 +42,7 @@
 .material-icons.pointed-icon{
     color:$my-orange;
 }
+.material-icons.pointed-icon-tohov{
+    color:$my-orange;
+    transition-duration: 1.2s;
+}
