--- a/resources/sass/profile/publications.scss
+++ b/resources/sass/profile/publications.scss
@@ -26,6 +26,7 @@
     height:35px;
     line-height: 34px;
     margin-top: 0.5em;
+    margin-right: 0.3em;
 }
 .pub-interesting:hover{
     border:2px solid $my-orange;
