--- a/resources/sass/profile/profile.scss
+++ b/resources/sass/profile/profile.scss
@@ -52,3 +52,6 @@
 .material-icons.md-light { color: rgba(255, 255, 255, 0.9); z-index: 100}
 
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.4); }
+.profile-articles{
+    min-height:500px;
+}
