--- a/resources/sass/header/metabar.scss
+++ b/resources/sass/header/metabar.scss
@@ -25,6 +25,7 @@
     display: inline;
     color:gray;
     margin-left: 2%;
+    text-transform: uppercase;
 }
 .meta-item:hover{
     text-decoration: none;
