--- a/resources/sass/home/articles.scss
+++ b/resources/sass/home/articles.scss
@@ -69,6 +69,9 @@
     text-transform: uppercase;
     color:gray;
     font-weight: 400;
+    &:hover{
+        color:gray;
+    }
 }
 .ar-middle-header{
     font-weight:600;
@@ -102,6 +105,9 @@
 
 .height-reg{
     height:160px
+}
+.blink{
+    max-width: 300px;
 }
 @media (min-width: 576px) {
     .height-reg{
