--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,3 +23,5 @@
 @import "article/featured";
 @import "profile/publications";
 @import "footer/footer";
+@import "home/text_editor";
+@import "tag/tag";
