--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -123,3 +123,9 @@ main{
     width:300px;
     height:200px;
 }
+.underline{
+    &:hover{
+        text-decoration: underline;
+        color:$my-orange-darked;
+    }
+}
